# sys-snippets

asm/mips/: Makefile  main.c  test1.s  test2.s  test3.s
daemon/: Makefile  daemon.c
daemon/c/: daemon.c  meson.build
eth_raw/: Makefile  Sconstruct  get_ifindex_by_ifname.c  get_ifname_by_ifindex.c  rx.c  tx.c
event_driven/: Makefile  event.c
fbdev/: Makefile  fbdev.c
fbdev/c/: fbdev.c  meson.build
fork/: Makefile  client.c  client_select.c
gdb-scripts/t1/: .gdbinit  .gitignore  (+3 more)
inetd/: Makefile  client.c  inetd.c
inotify/: Makefile  fs_notify.c
multicast/: Makefile  ipv6_mcast_recv.c  ipv6_mcast_send.c  mcast4.c  mcast6.c  setup_test_env.sh
multiplexing/: Makefile  poll_server.c  select_server.c
netdevice/: get_if.c
netdevice/c/: get_ifindex.c  meson.build  netdev_utils.c  netdev_utils.h  raw_sock_recv.c  raw_sock_xmit.c
netlink_ipc/: Sconstruct  client.c  server.c  tags
pipe-ipc/: Makefile  pipe.c  xmit.c
pthread/: Makefile  p1.cpp  p2.cpp  p3.cpp  p4.cpp
pty/: Makefile  fork_pty.c  minicom_tty.c  open_pty.c
riscv/: .gitignore  Makefile  hwprobe.c
rtnetlink/: Makefile  eth_monitor.c
sem/: Makefile  exec_fd.c
signal/: s1.cpp  s2.cpp  t.pl
tcp/c/echo/: client.c  meson.build  s_fork.c  s_poll.c  srv_select.c
time/: Makefile  time_client.c  time_fork_server.c  time_server.c
tun-tap/: Makefile  README  tunnel.c
udp/: Makefile  msg_udp_client.c  msg_udp_srv.c  test.pl  udp_client.c  udp_srv_nonblock.c
udp/c/msg/: c_udp_sg.c  c_udp_simple.c  meson.build  s_udp_nb.c  s_udp_sg.c
uinput/: Makefile  rx.c  tx.c
usb/: Makefile
(+54 files in other folders)
