project('udp', 'c',
  version : '0.2',
  default_options : ['c_std=gnu99', 'buildtype=debug'],
)

c_udp_simple = 'c_udp_simple.c'
c_udp_sg = 'c_udp_sg.c'

executable('c_udp_simple',  c_udp_simple)
executable('c_udp_sg',  c_udp_sg)

s_udp_simple = 's_udp_simple.c'
s_udp_nb = 's_udp_nb.c'

executable('s_udp_simple',  s_udp_simple)
executable('s_udp_nb',  s_udp_nb)
